<resources>
    <string name="app_name">Bahasa Pemrogramman</string>
    <string name="programing_language">Programing Language</string>
    <string name="detail">Detail</string>
    <string name="about">About</string>
    <string name="created_by">created by</string>
    <string name="sam_zuhal_setiawan">SAM ZUHAL SETIAWAN</string>
    <string name="profile_email">samzuhal095@gmail.com</string>
    <string name="tahun_rilis">Tahun Rilis</string>
    <string name="pembuat">Pembuat</string>
    <string name="ekstensi_file">Ekstensi File</string>
    <string name="rincian">Rincian</string>
    <string name="sumber_wikipedia">Sumber: Wikipedia</string>
    <string-array name="programming_language">
        <item>JavaScript</item>
        <item>C++</item>
        <item>C# (C Sharp)</item>
        <item>Kotlin</item>
        <item>Java</item>
        <item>Python</item>
        <item>Dart</item>
        <item>Swift</item>
        <item>TypeScript</item>
        <item>R</item>
    </string-array>
    <string-array name="short_detail">
        <item>Javascript adalah bahasa pemrograman tingkat tinggi dan dinamis. JavaScript populer di internet dan dapat bekerja di sebagian besar penjelajah web populer</item>
        <item>C++ adalah bahasa pemrograman komputer yang dibuat oleh Bjarne Stroustrup, yang merupakan perkembangan dari bahasa C dikembangkan di Bell Labs</item>
        <item>C# merupakan sebuah bahasa pemrograman yang berorientasi objek yang dikembangkan oleh Microsoft sebagai bagian dari inisiatif kerangka .NET Framework</item>
        <item>Kotlin adalah sebuah bahasa pemrograman dengan pengetikan statis yang berjalan pada Mesin Virtual Java ataupun menggunakan kompiler LLVM.</item>
        <item>Java adalah bahasa pemrograman yang dapat dijalankan di berbagai komputer termasuk telepon genggam. saat ini merupakan bagian dari Oracle dan dirilis tahun 1995.</item>
        <item>Python adalah bahasa pemrograman tujuan umum yang ditafsirkan, tingkat tinggi. Dibuat oleh Guido van Rossum dan pertama kali dirilis pada tahun 1991.</item>
        <item>Dart adalah bahasa pemrograman yang dirancang untuk pengembangan client, seperti untuk web dan aplikasi seluler. Bahasa ini dikembangkan oleh Google.</item>
        <item>Swift adalah bahasa pemrograman objek fungsional untuk pengembangan iOS dan OS X yang dibuat oleh Apple. Didesain untuk berdampingan dengan Objective-C.</item>
        <item>TypeScript adalah bahasa pemrograman yang dikembangkan dan dikelola oleh Microsoft.Bahasa Ini merupakan strict syntactical superset dari JavaScript</item>
        <item>adalah bahasa pemrograman dan perangkat lunak untuk analisis statistika dan grafik. R dibuat oleh Ross Ihaka dan Robert Gentleman di Universitas Auckland</item>
    </string-array>
</resources>