<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile1"
        android:src="@drawable/profile"
        />

    <TextView
        android:id="@+id/tv_profile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="21sp"
        android:text="@string/created_by"
        />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tv_profile2"
        android:layout_height="wrap_content"
        android:text="@string/sam_zuhal_setiawan"
        android:textStyle="bold"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_profile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="15sp"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/ic_email"
        android:layout_marginTop="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>