<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="0dp"
    android:paddingVertical="20dp"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_logo_pl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/programing_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_logo_pl"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_logo_pl"
        tools:text="JavaScript" />

    <TableLayout
        android:id="@+id/tl_quick_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="parent">
        <TableRow
            android:id="@+id/tr_detail1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/tv_detail1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tahun_rilis"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tv_detail_tahun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2021"
                android:textSize="18sp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tr_detail2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/tv_detail2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/pembuat"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tv_detail_pembuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Sam Zuhal"
                android:textSize="18sp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tr_detail3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/tv_detail3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ekstensi_file"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tv_detail_ekstensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text=".kt"
                android:textSize="18sp"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/tv_rincian_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rincian"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tl_quick_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_rincian_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/tv_rincian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="anggap saja ini rincian\n"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sumber_wikipedia"
                android:textStyle="italic"
                android:textColor="@android:color/darker_gray"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>